# magni_lidar_launch

./: CMakeLists.txt  README.md  package.xml
launch/: TallDeliveryMagni.launch  TallDeliveryMagni_lidar.launch  TallDeliveryMagni_lidar.launch.xml  magni_45_dual_laser.launch  map_server.launch
launch/TallDeliveryMagni/: TallDeliveryMagni_bottom_left_rplidar.launch.xml  TallDeliveryMagni_top_hokuyo_lidar.launch.xml  TallDeliveryMagni_top_right_rplidar.launch.xml  hokuyo.launch.xml
param/: .swp  amcl.yaml  magni_chart_5cm.yaml
param/maps/: chart.traffic-editor.yaml  chart_floor_plan.yaml  home.pgm  home.yaml  magni_chart_2cm.pgm  map_server_params.yaml
param/single_lidar_param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  magni.yaml  move_base_params.yaml  teleop.yaml
